fix header overlapping presets

--- a/app/styles/_presets.scss
+++ b/app/styles/_presets.scss
@@ -1,5 +1,5 @@
 #presets {
-  margin-top: -10px;
+  margin-top: 40px;
   text-align: center ;
 
   @include user-select(none);
